BUGFIX: Pdf renderer was clipping on zoom after centering page

--- a/extras/renderers/pdf/styles.css
+++ b/extras/renderers/pdf/styles.css
@@ -168,8 +168,10 @@
   display: flex;
   justify-content: center;
   background-color: #f5f5f5 !important;
-  padding: 10px 0;
+  padding: 10px 40px;
+  min-width: min-content;
   width: 100%;
+  scroll-margin-top: 56px;
 }
 
 .pdf-renderer-loading {
@@ -325,10 +327,6 @@
 .annotationLayer .linkAnnotation>a,
 .annotationLayer .buttonWidgetAnnotation.pushButton>a {
   pointer-events: auto;
-}
-
-.pdf-page-scroll {
-  scroll-margin-top: 56px;
 }
 
 /* match toolbar height */
